made quilt squares trivially positioned elements, which fixes the webkit z-index problem.

--- a/static-files/quilt.css
+++ b/static-files/quilt.css
@@ -23,6 +23,7 @@ a {
 }
 
 .quilt-square {
+  position: relative;
   display: inline-block;
   vertical-align: bottom;
   font-size: 20px;
